--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.29.0",
-    "react-modal": "^3.14.4",
     "react-multi-email": "^0.5.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -51,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.13.1"
+    "@types/react-modal": "^3.13.1",
+    "react-modal": "^3.15.1"
   }
 }
